--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -5,7 +5,7 @@ page {
 
 .container {
   position: relative;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -73,7 +73,7 @@ page {
 /* 回复框 */
 .chatFooterGroup {
   background: #fcfcfc;
-  position: fixed;
+  position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
