--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -67,6 +67,18 @@ page {
   color: #333;
 }
 
+.chatLabel.auto .articleBox .huanyihuan {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.chatLabel.auto .articleBox .huanyihuan .describe {
+  color: #3683d6;
+  font-size: 28rpx;
+  margin-left:20rpx;
+}
+
 .chatLabel.auto .avatar {
   right: auto;
   left: 0;
