--- a/pages/feedback/about/about.wxml
+++ b/pages/feedback/about/about.wxml
@@ -4,8 +4,8 @@
   <view class='logo-container'>
     <image class='logo-img' src='/imgs/1.png'></image>
     <view class="version-container">
-      <image src="https://img.shields.io/npm/v/lin-ui.svg?style=flat-square" class="version-img"></image>
-      <image src="https://img.shields.io/badge/HB_credit-v1.4-green.svg?style=flat-square" class="download-img"></image>
+      <image src="https://img.shields.io/badge/LinUI-v0.9.4-orange.svg?style=flat-square" class="version-img"></image>
+      <image src="https://img.shields.io/badge/Project-v1.4.0-green.svg?style=flat-square" class="download-img"></image>
     </view>
   </view>
   <view class='address-container'>
