--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -27,7 +27,7 @@
 						<image class='avatar' src='{{ avatarAuto }}'></image>
 						<view bindtap='{{!playingtag? "taptoplay" : "end" }}' data-detail="{{serviceMsg}}" class='articleBox'>
 							<text>{{ serviceMsg }}</text>
-							<l-icon name="soud" style="position:absolute;right:65rpx;top:50%;transform:translate(0, -50%);" />
+							<l-icon color="{{firstplayingtag==true? '':'gray'}}" name="soud" style="position:absolute;right:65rpx;top:50%;transform:translate(0, -50%);" />
 						</view>
 					</view>
 
@@ -71,9 +71,9 @@
 						<!-- 回答 -->
 						<view class='chatLabel auto' wx:if='{{ item.serviceMsg }}'>
 							<image class='avatar' src='{{ avatarAuto }}'></image>
-							<view bindtap='{{!playingtag? "taptoplay" : "end" }}' data-detail="{{item.serviceMsg}}"
+							<view bindtap='{{!playingtag? "taptoplay" : "end" }}' data-detail="{{item.serviceMsg}}" data-tag="{{index}}"
 								class='articleBox'>{{ item.serviceMsg }}
-								<l-icon name="soud" style="position:absolute;right:65rpx;top:50%;transform:translate(0, -50%);" />
+								<l-icon name="soud" color="{{item.playing==true? '':'gray'}}" style="position:absolute;right:65rpx;top:50%;transform:translate(0, -50%);" />
 								<view wx:if="{{item.list_options}}">
 									<text> 您可以说：
 
@@ -100,7 +100,7 @@
 					<l-input showRow="true" bind:linfocus="keyboardprocess" bind:linblur="keyboardprocess" placeholder="请输入您的问题"
 						value='{{ userMsg }}' name="useMsg" bind:lininput="bindInputValue" label-width="100">
 						<view slot="left" bindtap="changespeaktag">
-							<l-icon name='speak' l-class='iconfont' />
+							<l-icon name='speak' l-class='iconfont'/>
 						</view>
 						<view slot="right">
 							<l-button bg-color='{{!canSend? "gray" : ""}}' shape="circle" bindtap="sendMsg" type="default"
