版本升级，接口调换

--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -39,7 +39,7 @@ page {
   min-height: 30rpx;
   text-align: justify;
   max-width: 420rpx;
-  word-break: break-all;
+  line-break: auto;
 }
 
 .chatLabel .articleBox .highlight{
